Fix: Timetable tables do not align programs starting/ending at non-flat-hour correctly

--- a/css/schedule.css
+++ b/css/schedule.css
@@ -803,9 +803,10 @@ summary {
 				z-index: 11;
 				border-top: 1px solid var(--kompassi-fg-75);
 				opacity: 0.4;
+				text-align: right;
 
-				span {
-					opacity: 0;
+				em {
+					font-size: max(8pt, 80%);
 				}
 			}
 		}
